--- a/Todoey/View/Base.lproj/Main.storyboard
+++ b/Todoey/View/Base.lproj/Main.storyboard
@@ -77,12 +77,14 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Items" id="MGw-DV-C2B">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="MxN-YG-Ljr">
-                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="addTodoItem:" destination="7za-N9-BlH" id="WCQ-fd-A6V"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="searchBar" destination="o2R-RY-Rdq" id="SVz-cD-3yI"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DaU-Z5-v6q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -93,8 +95,8 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Xxh-fY-lyI" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="g9e-00-E1d">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="g9e-00-E1d">
+                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" red="0.15068201749999999" green="0.58831199999999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
